# Weight-based-automatic-classification-system

./: README.md
stm31411_cli/: stm31411_cli.ioc
stm31411_cli/Core/Inc/: FreeRTOSConfig.h  main.h
stm31411_cli/Core/Src/: gpio.c  main.c
stm31411_cli/MyApp/ap/: ap.c  ap.h
stm31411_cli/MyApp/hw/driver/: pir.c  pir.h
stm31411_cli/QT_UI/: CMakeLists.txt  Packetparser.cpp  Packetparser.h  Serialworker.cpp  Serialworker.h  main.cpp  mainwindow.cpp  mainwindow.h
